syntax = "proto3";

package password;

service PasswordService {
  rpc ValidatePassword (ValidatePasswordRequest) returns (ValidatePasswordResponse);
}

message ValidatePasswordRequest {
  string email = 1;
  string newPassword = 2;
  string previousPasswordHash = 3;
}

message ValidatePasswordResponse {
  bool valid = 1;
  repeated string reasons = 2;
}
